--- a/Readme
+++ b/Readme
@@ -49,4 +49,12 @@ Le projet propose une solution web fonctionnelle qui permet aux différents inte
 ```bash
 git clone https://github.com/votre-utilisateur/nom-du-repo.git
 cd nom-du-repo
+cd backend
+pip install -r requirements.txt
+python manage.py migrate
+python manage.py runserver
+cd frontend
+npm install
+ng serve
+Importer le schéma relationnel fourni dans database/schema.sql dans votre instance MySQL.
 
